# cpp_lua_glue_old

./: CMakeLists.txt
include/clg/: class_registrar.hpp  clg.hpp  converter.hpp  dynamic_result.hpp  exception.hpp  function.hpp  intrusive_ptr.hpp  lua.hpp  lua_function.hpp  magic_enum.hpp  object_expose.hpp  ref.hpp  shared_ptr_helper.hpp  table.hpp  util.hpp  value.hpp  vararg.hpp  weak_ref.hpp
test/: CMakeLists.txt  arg_consumtion_test.cpp  call_cpp_to_lua.cpp  call_lua_to_cpp.cpp  callback.cpp  classes.cpp  enum.cpp  error.cpp  from_lua.cpp  main.cpp  to_lua.cpp  userdata.cpp
